--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,8 @@
 SOURCES = quine.ml
 
+#Uncomment this, and remove -ppx ../ppx_blob below to use the installed version
+#PACKS = ppx_blob
+
 RESULT = quine
 
 OCAMLNCFLAGS = -g -w -3 -ppx ../ppx_blob
