--- a/example/Makefile
+++ b/example/Makefile
@@ -1,12 +1,12 @@
 SOURCES = quine.ml
 
-#Uncomment this, and remove -ppx ../ppx_blob below to use the installed version
-#PACKS = ppx_blob
+#Uncomment this, and remove -ppx ../ppx_netblob below to use the installed version
+#PACKS = ppx_netblob
 
 RESULT = quine
 
-OCAMLNCFLAGS = -g -w -3 -ppx ../ppx_blob
-OCAMLBCFLAGS = -g -w -3 -ppx ../ppx_blob
+OCAMLNCFLAGS = -g -w -3 -ppx ../ppx_netblob
+OCAMLBCFLAGS = -g -w -3 -ppx ../ppx_netblob
 OCAMLLDFLAGS = -g
 
 all : native-code
