add a way for the programmer to specify that they want a resource to be fetched at runtime instead of at compile time

--- a/example/Makefile
+++ b/example/Makefile
@@ -2,6 +2,7 @@ SOURCES = quine.ml
 
 #Uncomment this, and remove -ppx ../ppx_netblob below to use the installed version
 #PACKS = ppx_netblob
+PACKS = cohttp.lwt
 
 RESULT = quine
 
