--- a/ppx_blob.opam
+++ b/ppx_blob.opam
@@ -4,10 +4,10 @@ maintainer: "contact@coherentgraphics.co.uk"
 homepage: "https://github.com/johnwhitington/ppx_blob"
 dev-repo: "https://github.com/johnwhitington/ppx_blob.git"
 bug-reports: "https://github.com/johnwhitington/ppx_blob/issues/"
-build: [["jbuilder" "build" "-p" name "-j" jobs]]
-build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
+build: [["dune" "build" "-p" name "-j" jobs]]
+build-test: [["dune" "runtest" "-p" name "-j" jobs]]
 depends: [
-  "jbuilder" {build}
+  "dune" {build}
   "ocaml-migrate-parsetree"
   "alcotest" {test}
 ]
