--- a/ppx_blob.opam
+++ b/ppx_blob.opam
@@ -12,7 +12,7 @@ build: [
 depends: [
   "ocaml"
   "dune"
-  "ocaml-migrate-parsetree"
+  "ocaml-migrate-parsetree" {>= "1.7.0"}
   "alcotest" {with-test}
 ]
 synopsis: "Include a file as a string at compile time"
