Fix dependency to ppxlib in opam file

--- a/ppx_blob.opam
+++ b/ppx_blob.opam
@@ -12,7 +12,7 @@ build: [
 depends: [
   "ocaml"
   "dune"
-  "ocaml-migrate-parsetree" {>= "1.7.0" & < "2.0.0"}
+  "ppxlib"
   "alcotest" {with-test}
 ]
 synopsis: "Include a file as a string at compile time"
