--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
         with:
           ocaml-version: ${{ matrix.ocaml-version }}
       - run: opam pin add ppx_blob.dev . --no-action
-      - run: opam depext ppx_blob --yes --with-doc --with-test
-      - run: opam install . --deps-only --with-doc --with-test
+      - run: opam depext ppx_blob --yes --with-test
+      - run: opam install . --deps-only --with-test
       - run: opam exec -- dune build @all @runtest
