Add integration tests
This adds integration tests to ppx_blob. The choice of test cases is the
following:

- Dune 1.x with `(lang dune 1.0)`
- Dune 3.x with `(lang dune 3.0)`
- OCamlbuild
- Direct use of `ocamlopt`

Each test directory is self-contained and has its own Opam dependencies.
This commit adds the corresponding GitHub Actions jobs.

The result of the tests is the following:

As already noted in other discussions, there are cases that worked with
`(lang dune 1.0)` which stopped working in `(lang dune 3.0)`. More
specifically, finding a file relative to the source file no longer works
in 3.0. This also means that if the same relative path works for a file
relative to the build directory, it will be picked instead, thus
violating the precedence rule (see readme of ppx_blob).

The tests highlight other surprising behavior:

- Absolute paths can be shadowed by relative paths (`dune-lang-1` and
  `ocamlopt`).
- ppx_blob is of impractical with OCamlbuild (you have to look for the
  source files outside the build directory).

One thing I wasn't able to test is the behavior of Merlin and OCaml-LSP.
It looks like it can be confused by the use of
working-directory-relative paths.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Use OCaml ${{ matrix.ocaml-compiler }}
         uses: ocaml/setup-ocaml@v2
         with:
@@ -32,3 +32,24 @@ jobs:
       - run: opam depext ppx_blob --yes --with-test
       - run: opam install . --deps-only --with-test
       - run: opam exec -- dune build @all @runtest
+  integration-test:
+    strategy:
+      fail-fast: false
+      matrix:
+        test-dir:
+          - dune-lang-1
+          - dune-lang-3
+          - ocamlbuild
+          - ocamlopt
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Use OCaml ${{ matrix.ocaml-compiler }}
+        uses: ocaml/setup-ocaml@v2
+        with:
+          ocaml-compiler: 4.11.x
+      - run: opam pin add ppx_blob.dev .
+      - run: opam pin add foo "integration-test/${{ matrix.test-dir }}"
+      - run: opam exec -- make clean run
+        working-directory: "integration-test/${{ matrix.test-dir }}"
