--- a/integration-test/ocamlbuild/foo.opam
+++ b/integration-test/ocamlbuild/foo.opam
@@ -11,10 +11,9 @@ build: [
 ]
 depends: [
   "ocaml"
-  "dune" {>= "1.6"}
-  "ppxlib"
-  "alcotest" {with-test}
+  "ocamlbuild"
+  "ocamlfind"
+  "ppx_blob"
 ]
-synopsis: "Include a file as a string at compile time"
-description:
-  "ppx_blob allows you to include a binary blob from a file as a string. Writing `[%blob \"filename\"]` will replace the string with the contents of the file at compile time. This allows the inclusion of arbitary, possibly compressed, data, without the need to respect OCaml's lexical conventions."
+synopsis: "Test case for ppx_blob"
+description: "Test case for ppx_blob"
