Fix the handling of absolute paths
Changes for the user:

- Absolute paths are no longer concatenated with the source directory to
  form a blob candidate path: they are only treated as absolute paths.
- Minor robustness improvements (reminder: this happens at build time):
  - Reading is done in one pass (instead of checking for existence first).
  - Only the first good path is queried (instead of both).
  - Better I/O error handling.

Internal changes:

- Improved test suite:
  - Test files are easier to recognize (`.inc` extension).
  - Test of the precedence of the source relative path (see "ambiguous"
    test case).

--- a/test/subdir/dune
+++ b/test/subdir/dune
@@ -1,5 +1,8 @@
 (tests
+ (names test)
  (libraries alcotest)
- (preprocessor_deps (file test_file) (file ../test_file))
  (preprocess (pps ppx_blob))
- (names test))
+ (preprocessor_deps
+   (file ../root.inc)
+   (file ../common.inc)
+   (file sub.inc)))
