--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,9 @@
 (tests
+ (names test)
  (libraries alcotest)
- (preprocessor_deps (file test_file) (file subdir/test_file))
  (preprocess (pps ppx_blob))
- (names test))
+ (preprocessor_deps
+   (file root.inc)
+   (file common.inc)
+   (file test/common.inc)
+   (file subdir/sub.inc)))
